# realme-c53-unlock-root

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_PROMPT_TEMPLATE.md  README.id.md  README.md  cli.py  grantsu.sh  pyproject.toml
.github/workflows/: build_kernelsu_module.yml  build_release.yml  release.yml  test_python.yml
devices/: RMX3750.toml  RMX3760.toml  example_mediatek.toml  example_qualcomm.toml  template.toml
docs/: KSU_INIT_BUG.md  awaaion.md  session.md
files/: partition_layout.txt
release/: build_release.py
scripts/: backup.sh  root_kernelsu.sh  root_magisk.sh  unlock.sh
src/rmx_unlock/: __init__.py  adb.py  backup.py  cli.py  config.py  driver.py  exceptions.py  flash.py  logger.py  metadata.py  unlock.py  validation.py
tests/: test_rmx_unlock.py
tools/modules/ksu_loader/: customize.sh  module.prop  service.sh
