[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rmx-unlock-tool"
version = "2.0.0"
description = "Unlock bootloader and root Realme C53 (RMX3760) / Unisoc T612"
authors = [{ name = "Gopartner" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
